# useeplus-android

./: .gitattributes  .gitignore  LICENSE  README.md  gradle.properties  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  supercamera_core.cpp  supercamera_core.hpp
app/src/main/kotlin/com/naterobertson/useeplus/: GallerySaver.kt  MainActivity.kt  NativeBridge.kt  PreviewView.kt  UsbDeviceFinder.kt  UsbPermissionHelper.kt  VideoRecorder.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: device_filter.xml
